--- a/core/tests/gappedIndex/CMakeLists.txt
+++ b/core/tests/gappedIndex/CMakeLists.txt
@@ -31,7 +31,8 @@ add_definitions (${SEQAN_DEFINITIONS})
 # Update the list of file names below if you add source files to your test.
 add_executable (test_gappedIndex
                 test_gappedIndex.cpp
-                test_gappedIndex_find.h)
+                test_gappedIndex_find.h
+		test_gappedIndex_stree.h)
 
 # Add dependencies found by find_package (SeqAn).
 target_link_libraries (test_gappedIndex ${SEQAN_LIBRARIES})
